kenya/patients/static/css/encouragement.css
/* Full page styles */
body {
    font-family: sans-serif;
    background-color: rgb(217,233,236);
    border-style: solid;
    border-color: rgb(121, 121, 121);
    border-width: 2px;
    height: 715px;
}

.header-bar {
    background-color: rgb(120, 177, 189);
    color: #FFFFFF;
    font-size: 18px;
    padding-top: 5px;
    font-family: Arial;
    font-weight: bold;
    height: 28px;
    text-transform: uppercase;
}

.header-bar .title {
    padding-left: 15px;
}

.name_bar {
    background-color: rgb(212, 200, 156);
    text-align: center;
    font-size: 16px;
    font-weight: bold;
    height: 24px;
    color: rgb(51, 51, 51);
    padding-top: 6px;
    border-left-style: solid;
    border-top-style: solid;
    border-width: 2px;
    border-color: rgb(121, 121, 121);
    margin-left: -2px;
}

.logout {
    float: right;
    margin-right: 0.5em;
    padding-top: 0px;
}

.errors {
    color: red;
}

.collapseerrors ul {
    margin: 0;
    padding: 0;
    display: inline;
    list-style-type: none;
}

.collapseerrors .errorlist li {
    margin: 0;
    padding: 0;
    display: inline;
    list-style-type: none;
}

.gray_button {
    background-color: rgb(159, 157, 150);
    color: rgb(255, 255, 255);
    padding: 2px 7px 2px 7px;
    border-style: solid;
    border-color: rgb(0, 0, 0);
    border-width: 1px;
    margin-right: 5px;
}

.blue_button {
    background-color: rgb(91,141,147);
    color: rgb(255, 255, 255);
    padding: 2px 7px 2px 7px;
    border-style: solid;
    border-color: rgb(0, 0, 0);
    border-width: 1px;
    margin-right: 5px;
}
/* End full page styles. */

/* Search bar styles */
.search_bar {
    border-top-style: solid;
    border-width: 2px;
    border-color: rgb(121, 121, 121);
    margin-right: -2px;
    padding-top: 4px;
}

.search_bar .addbutton {
    float: right;
    width: 40px;
    height: 24px;
    background-image: url('/static/images/add_client.png');
    background-position: center;
    background-repeat: no-repeat;
}
/* End search bar styles */

/* Styles for the client list. */
.client_list {
    height: 650px;
    overflow: auto;
}

.list .person {
    padding: 3px 3px 3px 3px;
    border-bottom: 1px dashed grey;
    background-color:rgb(217,233,236);
    color:rgb(1,1,1);
}

.list .header {
    width: 100%;
}

.list .name {
    font-size: 16px;
}

.list .pendingname {
    font-style: bold;
    font-size:20px;
    background-image: url("/static/images/pending_message.png");
    background-position: right;
    background-repeat: no-repeat;
}
/* End styles for the client list. */


/* Styles for the client details pane. */
.info {
    height: 645px;
    background-color: rgb(255, 255, 255);
    padding-top: 5px;
    overflow: auto;
}

.info .header {
    background-color: rgb(208, 206, 196);
    font-weight: bold;
    font-size: 15px;
    padding: 5px;
    padding-left: 20px;
    margin-right: 5px;
    height: auto;
    overflow: auto;
    background-position: 5px center;
    background-repeat: no-repeat;
}

.info_expanded {
    background-image: url("/static/images/expanded.png");
}

.info_collapsed {
    background-image: url("/static/images/collapsed.png");
}

.info table {
    background-color: rgb(245, 242, 231);
    margin-right: 5px;
    margin-bottom: 10px;
}

.info tr {
    padding: 10px;
    height: 30px;
    margin-right: 5px;
}

.info td {
    vertical-align:middle;
    border-bottom: 1px dashed grey;
}

.info .content {
    width: 65%;
    font-size: 13px;
}

.info .date {
    width: 25%;
    font-size: 12px;
    font-style: italic;
    color: rgb(102,102,102);
}

.info .title {
    width: 40%;
    text-align: right;
    padding-right: 10px;
}

.info .data {
    width: 60%;
    padding: 0px;
    text-align: left;
    font-size: 20px;
}

.info .delete {
    width: 10%;
    text-align: center;
    font-size: 20px;
}

.info #edit {
    background-position: center;
    width: 16px;
    height: 16px;
    background-image: url("/static/images/gear.png");
    background-repeat: no-repeat;
    float: right;
}

.info #save {
    background-position: center;
    width: 16px;
    height: 16px;
    margin-right: 5px;
    background-image: url("/static/images/plus.png");
    background-repeat: no-repeat;
    float: right;
}

.info #cancel {
    background-position: center;
    width: 16px;
    height: 16px;
    background-image: url("/static/images/cancel.png");
    float: right;
}

.info .add {
    background-position: center;
    width: 16px;
    height: 16px;
    background-image: url("/static/images/plus.png");
    background-repeat: no-repeat;
    float: right;
}
/* End styles for client details pane. */


/* Styles for the message page. */
.messages {
    background-color:rgb(255,255,255);
    height: 645px;
    overflow: auto;
    border-left-style: solid;
    border-width: 2px;
    border-color: rgb(121, 121, 121);
    padding-top: 5px;
}

.messages .Client, .messages .Nurse, .messages .System, .messages .Phone {
    margin: 5px 15px 5px 10px;
    padding: 3px 5px 3px 5px;
    width: 60%;
    clear: both;
    color: rgb(255,255,255);
}

.messages .Client {
    float: left;
    margin-right: auto;
    background-color: rgb(91,141,147);
}

.messages .System, .messages .Nurse, .messages .Phone {
    float: right;
    margin-left: auto;
    text-align: right;
}

.messages .Phone {
	background-color: rgb(205, 124, 163);
}

.messages .System {
    background-color: rgb(214,214,214);
    color: rgb(0,0,0);
}

.messages .Nurse {
    background-color: rgb(168,140,91);
}

.messages .message-list {
	margin: 50px 5px;
}

.messages .Boxes {
    height: 120px;
    top: 0px;
    margin-left: 5px;
    margin-right: 5px;
    background-color: rgb(255,255,255);
}

.messages .message-box {
    top: 50px; 
    left: 0px; 
    background-color: rgb(240,240,240); 
    overflow: hidden; 
    border-style: solid;
    width: 100%;
    margin: -1px;
    border-width: 1px;
    border-color: rgb(121, 121, 121);
}

.messages .phone-box {
    top: 50px; 
    left: 0px; 
    background-color: rgb(120,240,240); 
    overflow: hidden; 
    border-style: solid;
    width: 100%;
    margin: -1px;
    border-width: 1px;
    border-color: rgb(121, 121, 121);
}

.messages .envelopepic .tab {
	width: 60px;
	height: 20px;
	background-image: url("/static/images/message.png");
	background-repeat: no-repeat;
	background-position: center;

}

.messages .phonepic .tab {
	width: 60px;
	height: 20px;
	background-image: url("/static/images/call.png");
	background-repeat: no-repeat;
	background-position: center;
}

.messages .tab {
	margin-top: 5px;
	border-radius: 10px 10px 0px 0px;
	border-style: solid;
    border-width: 1px 1px 0px 1px;
    border-color: rgb(121, 121, 121);
}

.messages .phonepic .selected {
	background-image: url("/static/images/call_large.png");
	width: 80px;
	height: 23px;
	margin-top:2px;
}

.messages .envelopepic .selected {
    background-image: url("/static/images/message_large.png");
    width: 80px;
	height: 23px;
	margin-top:2px;
}

.messages .header {
    background-color: rgb(212,200,156);
    text-align: center;
    font-size: 20px;
}

.messages .content {
    text-align: left;
}

.messages .date {
    font-size: 10px;
    vertical-align: middle;
    float: right;
}

.messages .top {
    font-size:14px;
    text-align: left;
}

.messages .Clientcontent {
    font-size: 20px;
}

.messages ul.tabs {
    width:250px;
    margin:0;
    padding:0;
}

.messages ul.tabs li {
    display:block;
    float:left;
    padding:0 1px;
}

.messages ul.tabs li a {
    display:block;
    float:left;
    padding:5px;
    font-size:0.8em;
    background-color:#e0e0e0;
    color:#666;
    text-decoration:none;
}

.messagetable {
	border-style: solid;
    border-width: 1px;
    border-color: rgb(121, 121, 121);
}

.messagetable th {
	border-style: solid;
    border-width: 1px;
    border-color: rgb(121, 121, 121);
}

.messagetable td {
	border-style: solid;
    border-width: 1px;
    border-color: rgb(121, 121, 121);
}
/* End messages styles. */

